[package]
name = "wampire"
version = "0.1.2"
authors = ["Dudochkin Victor <dudochkin.victor@gmail.com>", "Daniel Yule <yule@cs.dal.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ohyo-io/wampire"
documentation = "https://github.com/ohyo-io/wampire"
homepage = "https://github.com/ohyo-io/wampire"
description = "A WAMPv2 client and router implenting the basic WAMP profile"
keywords = ["rpc", "pubsub", "wamp", "wamp2"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]

[lib]
name = "wampire"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.4"
log = "0.3"
env_logger = "0.3"
ws = "0.7"
rmp = "0.8"
rmp-serde = "0.13.1"
rand = "0.3"
eventual = "0.1.7"
