[package]
name = "wampire"
version = "0.1.2"
edition = "2018"
authors = ["Dudochkin Victor <dudochkin.victor@gmail.com>", "Daniel Yule <yule@cs.dal.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ohyo-io/wampire"
documentation = "https://github.com/ohyo-io/wampire"
homepage = "https://github.com/ohyo-io/wampire"
description = "A WAMPv2 client and router implenting the basic WAMP profile"
keywords = ["rpc", "pubsub", "wamp", "wamp2"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]

[lib]
name = "wampire"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.7"
log = "0.4"
env_logger = "0.5"
ws = "0.7"
rmp = "0.8"
rmp-serde = "0.13"
rand = "0.5.0-pre.1"
eventual = "0.1.7"
itertools = "0.7"
argparse = "0.2.1"

[features]
default = []
ssl = ["ws/ssl"]
