[package]
name = "wampire"
version = "0.1.2"
edition = "2018"
authors = ["Dudochkin Victor <dudochkin.victor@gmail.com>", "Daniel Yule <yule@cs.dal.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ohyo-io/wampire"
documentation = "https://github.com/ohyo-io/wampire"
homepage = "https://github.com/ohyo-io/wampire"
description = "A WAMPv2 client and router implenting the basic WAMP profile"
keywords = ["rpc", "pubsub", "wamp", "wamp2"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]

[lib]
name = "wampire"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
log = "0.4"
env_logger = "0.9"
ws = "0.9"
rmp = "0.8"
rmp-serde = "1.1"
rand = "0.8"
futures = "0.3"
itertools = "0.10"
argparse = "0.2.1"
intmap = "0.7.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
ssl = ["ws/ssl"]
